--- a/src/app/opponent-overview/opponent-score/opponent-score.component.html
+++ b/src/app/opponent-overview/opponent-score/opponent-score.component.html
@@ -17,7 +17,7 @@
     </button>
   </div>
   <div class="flex w-full">
-    <div class="w-1/3 sm:w-1/3">
+    <div class="w-1/3 sm:w-1/4">
       <label class="p-1">
         <span>PokePaste</span>
         <input
@@ -27,7 +27,7 @@
       /></label>
     </div>
     <div class="flex-grow"></div>
-    <div class="w-1/3 sm:w-1/3">
+    <div class="w-1/3 sm:w-1/4">
       <label class="p-1">
         <span>PokePaste</span>
         <input
@@ -163,15 +163,22 @@
             class="p-2 m-2 space-y-3 bg-red-300 shadow-md team shadow-red-600 rounded-xl"
           >
             <div class="p-2 border-2 border-red-200 rounded-xl">
-              <div class="grid w-full grid-cols-1 sm:grid-cols-2 gap-x-4">
-                <div class="flex justify-center space-x-2">
-                  <div class="font-semibold">Deaths:</div>
-                  <div>{{ statCount(bTeamArray, ["fainted"]) }}</div>
+              <div class="flex w-full">
+                <div class="flex justify-center w-32">
+                  <button>Winner</button>
                 </div>
-                <div class="flex justify-center space-x-2">
-                  <div class="font-semibold">Kills:</div>
+                <div class="grid flex-grow grid-cols-1 sm:grid-cols-2 gap-x-4">
+                  <div class="flex justify-center space-x-2">
+                    <div class="font-semibold">Deaths:</div>
+                    <div>{{ statCount(bTeamArray, ["fainted"]) }}</div>
+                  </div>
+                  <div class="flex justify-center space-x-2">
+                    <div class="font-semibold">Kills:</div>
 
-                  <div>{{ statCount(bTeamArray, ["kills", "indirect"]) }}</div>
+                    <div>
+                      {{ statCount(bTeamArray, ["kills", "indirect"]) }}
+                    </div>
+                  </div>
                 </div>
               </div>
               <div
