--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -112,10 +112,10 @@
         </div>
 
         <div *ngIf="isPoints">
-          <label for="totalPoints">Total Points</label>
+          <label class="font-bold" for="totalPoints">Total Points</label>
           <input
             type="number"
-            class="w-16 p-0.5 rounded"
+            class="w-16 font-semibold p-0.5 rounded"
             formControlName="totalPoints"
             id="totalPoints"
           />
