--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,12 @@
         <div class="flex items-center h-full px-3 opacity-50 font-nasa">
           Statistics
         </div>
+        <div
+          routerLink="/tools"
+          class="flex items-center h-full px-2 rounded hover:cursor-pointer hover:bg-slate-200"
+        >
+          Tools
+        </div>
       </div>
       <div
         routerLink="/"
@@ -56,6 +62,12 @@
           class="flex items-center h-full px-2 rounded opacity-50 hover:cursor-pointer hover:bg-slate-200"
         >
           Statistics
+        </div>
+        <div
+          routerLink="/tools"
+          class="flex items-center h-full px-2 rounded hover:cursor-pointer hover:bg-slate-200"
+        >
+          Tools
         </div>
       </div>
     </div>
