clean up replay tool

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
           routerLink="/tools"
           class="flex items-center h-full px-2 rounded hover:cursor-pointer hover:bg-slate-200"
         >
-          Tools
+          Other Tools
         </div>
       </div>
       <div
@@ -67,7 +67,7 @@
           routerLink="/tools"
           class="flex items-center h-full px-2 rounded hover:cursor-pointer hover:bg-slate-200"
         >
-          Tools
+          Other Tools
         </div>
       </div>
     </div>
