add quick links and replay banner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -107,7 +107,17 @@
     <router-outlet></router-outlet>
   </main>
   <footer class="z-10 flex w-full border-t-2 bg-slate-300 border-slate-400">
-    <div class="w-1/2"></div>
+    <div class="flex w-1/2 mx-5 my-1 space-x-3">
+      <a href="https://play.pokemonshowdown.com" target="_blank"
+        ><img class="h-5" src="../assets/icons/media/showdown.png"
+      /></a>
+      <a href="https://bulbapedia.com" target="_blank"
+        ><img class="h-5" src="../assets/icons/media/bulbapedia.png"
+      /></a>
+      <a href="https://pikalytics.com" target="_blank"
+        ><img class="h-5" src="../assets/icons/media/pikalytics.png"
+      /></a>
+    </div>
     <div class="flex justify-end w-1/2 mx-5 my-1 space-x-3">
       <a
         href="https://github.com/LumarisX/pokemon-draftzone-client"
