--- a/src/app/tools/replay_analyzer/replay.component.html
+++ b/src/app/tools/replay_analyzer/replay.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center w-full">
+<div class="flex flex-col items-center w-full">
   <div class="p-2 m-2 border-2 w-fit bg-slate-100 rounded-xl border-slate-400">
     Replay <input [(ngModel)]="replayURI" type="text" class="p-1 mx-2 w-96" />
     <button
@@ -7,6 +7,13 @@
     >
       Analyze
     </button>
+  </div>
+  <div
+    class="max-w-full p-2 font-bold text-center bg-yellow-300 rounded-full w-fit"
+  >
+    The replay analyzer is currently still in testing. If you find errors,
+    please share the replay on our
+    <a href="https://discord.gg/sQUEBW4UVx" class="text-blue-500">Discord</a>.
   </div>
 </div>
 <div *ngIf="replayData" class="flex justify-center w-full p-2">
